--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -696,7 +696,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
         rules:
         - priority: 1
           serve:
@@ -709,8 +709,8 @@ featureFlags:
         targetRules:
         - targets:
           - identifier: norm
-          - identifier: Fiserv
           - identifier: __global__cf_target
+          - identifier: Fiserv
           variation: "false"
         - targetGroups:
           - identifier: bootcamp
