--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -219,14 +219,14 @@ featureFlags:
         state: "off"
         targetRules:
         - targets:
+          - identifier: bootcamp
+          variation: "15"
+        - targets:
           - identifier: harness
           variation: "90"
         - targets:
           - identifier: Blackrock
           variation: "7"
-        - targets:
-          - identifier: bootcamp
-          variation: "15"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -696,7 +696,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
         rules:
         - priority: 1
           serve:
@@ -707,17 +707,17 @@ featureFlags:
             values:
             - BETABlackrock
         targetRules:
-        - targets:
-          - identifier: norm
-          - identifier: __global__cf_target
-          - identifier: Fiserv
-          variation: "false"
         - targetGroups:
           - identifier: bootcamp
           targets:
           - identifier: Harness
           - identifier: Experian
           variation: "true"
+        - targets:
+          - identifier: norm
+          - identifier: __global__cf_target
+          - identifier: Fiserv
+          variation: "false"
       - identifier: Prod
         default:
           onVariation: "true"
