--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -219,14 +219,14 @@ featureFlags:
         state: "off"
         targetRules:
         - targets:
+          - identifier: bootcamp
+          variation: "15"
+        - targets:
           - identifier: harness
           variation: "90"
         - targets:
           - identifier: Blackrock
           variation: "7"
-        - targets:
-          - identifier: bootcamp
-          variation: "15"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -696,7 +696,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
         rules:
         - priority: 1
           serve:
@@ -715,8 +715,8 @@ featureFlags:
         - targetGroups:
           - identifier: bootcamp
           targets:
-          - identifier: Harness
           - identifier: Experian
+          - identifier: Harness
           variation: "true"
       - identifier: Prod
         default:
