--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -219,14 +219,14 @@ featureFlags:
         state: "off"
         targetRules:
         - targets:
+          - identifier: harness
+          variation: "90"
+        - targets:
           - identifier: Blackrock
           variation: "7"
         - targets:
           - identifier: bootcamp
           variation: "15"
-        - targets:
-          - identifier: harness
-          variation: "90"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -418,7 +418,7 @@ featureFlags:
         default:
           onVariation: "20"
           offVariation: "10"
-        state: "off"
+        state: "on"
         targetRules:
         - targets:
           - identifier: Aptiv
