--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -218,18 +218,18 @@ featureFlags:
           offVariation: "7"
         state: "off"
         targetRules:
-        - targetGroups:
-          - identifier: FlagsTeam
-          variation: "20"
-        - targets:
-          - identifier: harness
-          variation: "90"
         - targets:
           - identifier: Blackrock
           variation: "7"
         - targets:
           - identifier: bootcamp
           variation: "15"
+        - targets:
+          - identifier: harness
+          variation: "90"
+        - targetGroups:
+          - identifier: FlagsTeam
+          variation: "20"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -702,7 +702,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
         rules:
         - priority: 1
           serve:
