--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -219,14 +219,14 @@ featureFlags:
         state: "off"
         targetRules:
         - targets:
-          - identifier: harness
-          variation: "90"
-        - targets:
           - identifier: Blackrock
           variation: "7"
         - targets:
           - identifier: bootcamp
           variation: "15"
+        - targets:
+          - identifier: harness
+          variation: "90"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
@@ -611,12 +611,12 @@ featureFlags:
           offVariation: "7"
         state: "on"
         targetRules:
-        - targets:
-          - identifier: Blackrock
-          variation: "20"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "60"
+        - targets:
+          - identifier: Blackrock
+          variation: "20"
       - identifier: Prod
         default:
           onVariation: "30"
@@ -702,7 +702,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
         rules:
         - priority: 1
           serve:
