--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -219,6 +219,9 @@ featureFlags:
         state: "off"
         targetRules:
         - targets:
+          - identifier: Blackrock
+          variation: "7"
+        - targets:
           - identifier: harness
           variation: "90"
         - targetGroups:
@@ -227,9 +230,6 @@ featureFlags:
         - targets:
           - identifier: bootcamp
           variation: "15"
-        - targets:
-          - identifier: Blackrock
-          variation: "7"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -702,7 +702,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
         rules:
         - priority: 1
           serve:
