--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -219,6 +219,9 @@ featureFlags:
         state: "off"
         targetRules:
         - targets:
+          - identifier: bootcamp
+          variation: "15"
+        - targets:
           - identifier: Blackrock
           variation: "7"
         - targets:
@@ -227,9 +230,6 @@ featureFlags:
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
-        - targets:
-          - identifier: bootcamp
-          variation: "15"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -1230,6 +1230,92 @@ featureFlags:
       - identifier: rushabhtest
         default:
           onVariation: ""
+          offVariation: "false"
+        state: "off"
+      - identifier: storztest
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: testdeleteme
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: TestingNewEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: Test_on_the_Fly
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: sfdsd
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: devteam
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: flagdev2
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+  - flag:
+      name: NormEnv
+      identifier: normenv
+      description: ""
+      permanent: false
+      spec:
+        type: boolean
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        variations:
+        - identifier: "true"
+          value: "true"
+        - identifier: "false"
+          value: "false"
+      environments:
+      - identifier: ""
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: demoenv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: Prod
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: FlagDev
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: env_test_123
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: env
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: rushabhtest
+        default:
+          onVariation: "true"
           offVariation: "false"
         state: "off"
       - identifier: storztest
