Created environment NormEnv

--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -86,6 +86,11 @@ featureFlags:
           onVariation: "true"
           offVariation: "false"
         state: "off"
+      - identifier: NormEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
   - flag:
       name: Enable ZAP logger
       identifier: Enable_ZAP_logger
@@ -185,6 +190,11 @@ featureFlags:
           onVariation: "true"
           offVariation: "false"
         state: "off"
+      - identifier: NormEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
   - flag:
       name: CE Trial Limit
       identifier: harnessappdemocetriallimit
@@ -218,6 +228,9 @@ featureFlags:
           offVariation: "7"
         state: "off"
         targetRules:
+        - targetGroups:
+          - identifier: FlagsTeam
+          variation: "20"
         - targets:
           - identifier: bootcamp
           variation: "15"
@@ -227,9 +240,6 @@ featureFlags:
         - targets:
           - identifier: harness
           variation: "90"
-        - targetGroups:
-          - identifier: FlagsTeam
-          variation: "20"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -298,6 +308,11 @@ featureFlags:
         - targetGroups:
           - identifier: davegroup
           variation: "7"
+      - identifier: NormEnv
+        default:
+          onVariation: "20"
+          offVariation: "7"
+        state: "off"
   - flag:
       name: CF Ribbon
       identifier: harnessappdemocfribbon
@@ -388,6 +403,11 @@ featureFlags:
           offVariation: "false"
         state: "off"
       - identifier: flagdev2
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: NormEnv
         default:
           onVariation: "true"
           offVariation: "false"
@@ -486,6 +506,11 @@ featureFlags:
           onVariation: "20"
           offVariation: "10"
         state: "off"
+      - identifier: NormEnv
+        default:
+          onVariation: "20"
+          offVariation: "10"
+        state: "off"
   - flag:
       name: CI Trial Limit
       identifier: harnessappdemocitriallimit
@@ -580,6 +605,11 @@ featureFlags:
           onVariation: "14"
           offVariation: "7"
         state: "off"
+      - identifier: NormEnv
+        default:
+          onVariation: "14"
+          offVariation: "7"
+        state: "off"
   - flag:
       name: CV Trial Limit
       identifier: harnessappdemocvtriallimit
@@ -611,12 +641,12 @@ featureFlags:
           offVariation: "7"
         state: "on"
         targetRules:
-        - targets:
-          - identifier: Blackrock
-          variation: "20"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "60"
+        - targets:
+          - identifier: Blackrock
+          variation: "20"
       - identifier: Prod
         default:
           onVariation: "30"
@@ -673,6 +703,11 @@ featureFlags:
           offVariation: "7"
         state: "off"
       - identifier: flagdev2
+        default:
+          onVariation: "30"
+          offVariation: "7"
+        state: "off"
+      - identifier: NormEnv
         default:
           onVariation: "30"
           offVariation: "7"
@@ -828,6 +863,11 @@ featureFlags:
         - targets:
           - identifier: dave
           variation: "true"
+      - identifier: NormEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
   - flag:
       name: Enable CE Module
       identifier: harnessappdemoenablecemodule
@@ -910,6 +950,11 @@ featureFlags:
           offVariation: "false"
         state: "off"
       - identifier: flagdev2
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: NormEnv
         default:
           onVariation: "true"
           offVariation: "false"
@@ -1000,6 +1045,11 @@ featureFlags:
           onVariation: "true"
           offVariation: "false"
         state: "off"
+      - identifier: NormEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
   - flag:
       name: Enable CI Module
       identifier: harnessappdemoenablecimodule
@@ -1086,6 +1136,11 @@ featureFlags:
           onVariation: "true"
           offVariation: "false"
         state: "off"
+      - identifier: NormEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
   - flag:
       name: Enable CV Module
       identifier: harnessappdemoenablecvmodule
@@ -1168,6 +1223,11 @@ featureFlags:
           offVariation: "false"
         state: "off"
       - identifier: flagdev2
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: NormEnv
         default:
           onVariation: "true"
           offVariation: "false"
@@ -1267,6 +1327,11 @@ featureFlags:
           onVariation: "true"
           offVariation: "false"
         state: "off"
+      - identifier: NormEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
   - flag:
       name: NormEnv
       identifier: normenv
@@ -1349,6 +1414,11 @@ featureFlags:
           offVariation: "false"
         state: "off"
       - identifier: flagdev2
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: NormEnv
         default:
           onVariation: "true"
           offVariation: "false"
@@ -1439,6 +1509,11 @@ featureFlags:
           onVariation: "true"
           offVariation: "false"
         state: "off"
+      - identifier: NormEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
   - flag:
       name: normTest
       identifier: normtest
@@ -1525,6 +1600,11 @@ featureFlags:
           onVariation: "true"
           offVariation: "false"
         state: "off"
+      - identifier: NormEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
   - flag:
       name: Dashboards Enabled
       identifier: Simpletoggle
@@ -1607,6 +1687,11 @@ featureFlags:
           offVariation: "false"
         state: "off"
       - identifier: flagdev2
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: NormEnv
         default:
           onVariation: "true"
           offVariation: "false"
