--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -229,14 +229,14 @@ featureFlags:
         state: "off"
         targetRules:
         - targets:
-          - identifier: harness
-          variation: "90"
-        - targets:
           - identifier: bootcamp
           variation: "15"
         - targets:
           - identifier: Blackrock
           variation: "7"
+        - targets:
+          - identifier: harness
+          variation: "90"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
@@ -1422,7 +1422,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
   - flag:
       name: NormFF
       identifier: normff
