--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -228,6 +228,9 @@ featureFlags:
           offVariation: "7"
         state: "off"
         targetRules:
+        - targetGroups:
+          - identifier: FlagsTeam
+          variation: "20"
         - targets:
           - identifier: bootcamp
           variation: "15"
@@ -237,9 +240,6 @@ featureFlags:
         - targets:
           - identifier: harness
           variation: "90"
-        - targetGroups:
-          - identifier: FlagsTeam
-          variation: "20"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -762,17 +762,17 @@ featureFlags:
             values:
             - FlagsTeam
         targetRules:
-        - targets:
-          - identifier: norm
-          - identifier: __global__cf_target
-          - identifier: Fiserv
-          variation: "false"
         - targetGroups:
           - identifier: bootcamp
           targets:
           - identifier: Experian
           - identifier: Harness
           variation: "true"
+        - targets:
+          - identifier: norm
+          - identifier: __global__cf_target
+          - identifier: Fiserv
+          variation: "false"
       - identifier: Prod
         default:
           onVariation: "true"
@@ -1422,7 +1422,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
   - flag:
       name: NormFF
       identifier: normff
