--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -231,15 +231,15 @@ featureFlags:
         - targets:
           - identifier: bootcamp
           variation: "15"
-        - targetGroups:
-          - identifier: FlagsTeam
-          variation: "20"
         - targets:
           - identifier: Blackrock
           variation: "7"
         - targets:
           - identifier: harness
           variation: "90"
+        - targetGroups:
+          - identifier: FlagsTeam
+          variation: "20"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -1422,7 +1422,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
         targetRules:
         - targets:
           - identifier: normstarget
