--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -228,18 +228,18 @@ featureFlags:
           offVariation: "7"
         state: "off"
         targetRules:
-        - targets:
-          - identifier: Blackrock
-          variation: "7"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
         - targets:
-          - identifier: harness
-          variation: "90"
-        - targets:
           - identifier: bootcamp
           variation: "15"
+        - targets:
+          - identifier: Blackrock
+          variation: "7"
+        - targets:
+          - identifier: harness
+          variation: "90"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -1422,7 +1422,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
         targetRules:
         - targets:
           - identifier: normstarget
