--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -228,9 +228,6 @@ featureFlags:
           offVariation: "7"
         state: "off"
         targetRules:
-        - targetGroups:
-          - identifier: FlagsTeam
-          variation: "20"
         - targets:
           - identifier: bootcamp
           variation: "15"
@@ -240,6 +237,9 @@ featureFlags:
         - targets:
           - identifier: harness
           variation: "90"
+        - targetGroups:
+          - identifier: FlagsTeam
+          variation: "20"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -737,7 +737,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
         rules:
         - priority: 1
           serve:
