--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -641,12 +641,12 @@ featureFlags:
           offVariation: "7"
         state: "on"
         targetRules:
-        - targetGroups:
-          - identifier: FlagsTeam
-          variation: "60"
         - targets:
           - identifier: Blackrock
           variation: "20"
+        - targetGroups:
+          - identifier: FlagsTeam
+          variation: "60"
       - identifier: Prod
         default:
           onVariation: "30"
@@ -762,17 +762,17 @@ featureFlags:
             values:
             - FlagsTeam
         targetRules:
+        - targets:
+          - identifier: norm
+          - identifier: __global__cf_target
+          - identifier: Fiserv
+          variation: "false"
         - targetGroups:
           - identifier: bootcamp
           targets:
           - identifier: Experian
           - identifier: Harness
           variation: "true"
-        - targets:
-          - identifier: norm
-          - identifier: __global__cf_target
-          - identifier: Fiserv
-          variation: "false"
       - identifier: Prod
         default:
           onVariation: "true"
@@ -1422,7 +1422,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
   - flag:
       name: NormFF
       identifier: normff
