--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -229,6 +229,9 @@ featureFlags:
         state: "off"
         targetRules:
         - targets:
+          - identifier: bootcamp
+          variation: "15"
+        - targets:
           - identifier: Blackrock
           variation: "7"
         - targets:
@@ -237,9 +240,6 @@ featureFlags:
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
-        - targets:
-          - identifier: bootcamp
-          variation: "15"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -737,7 +737,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
         rules:
         - priority: 1
           serve:
