--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -234,12 +234,12 @@ featureFlags:
         - targets:
           - identifier: harness
           variation: "90"
-        - targets:
-          - identifier: bootcamp
-          variation: "15"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
+        - targets:
+          - identifier: bootcamp
+          variation: "15"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -737,7 +737,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
         rules:
         - priority: 1
           serve:
