[AUTO-COMMIT] : Created feature flag

--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -1,6 +1,102 @@
 featureFlags:
   flags:
   - flag:
+      name: DavesNewFlag
+      identifier: DavesNewFlag
+      description: ""
+      permanent: false
+      spec:
+        type: boolean
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        variations:
+        - identifier: "true"
+          value: "true"
+        - identifier: "false"
+          value: "false"
+      environments:
+      - identifier: ""
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: demoenv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: Prod
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: FlagDev
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: env_test_123
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: env
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: rushabhtest
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: storztest
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: testdeleteme
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: TestingNewEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: Test_on_the_Fly
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: sfdsd
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: devteam
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: flagdev2
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: april6deleteme
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+      - identifier: NormEnv
+        default:
+          onVariation: "true"
+          offVariation: "false"
+        state: "off"
+  - flag:
       name: DiscoverTest
       identifier: DiscoverTest
       description: ""
@@ -248,14 +344,14 @@ featureFlags:
             - FlagsTeam
         targetRules:
         - targets:
-          - identifier: bootcamp
-          variation: "15"
-        - targets:
           - identifier: Blackrock
           variation: "7"
         - targets:
           - identifier: harness
           variation: "90"
+        - targets:
+          - identifier: bootcamp
+          variation: "15"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
